feature(Documentation): Added the documentation for all the requests.
